<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_weatherapp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/welcomeTitle"
        android:layout_marginTop="30dp"
        android:autofillHints="enter username"
        android:hint="@string/usernamelogin"
        android:inputType="textPersonName"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/usernameInput"
        android:layout_marginTop="15dp"
        android:autofillHints="enter password"
        android:hint="@string/password_login_activity"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/welcomeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_personal_weather_companion"
        android:textSize="18sp"
        android:layout_below="@id/passwordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>



    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity"
        android:layout_below="@id/welcomeSubtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
